Fix post and broken CSS

--- a/css/style.sass
+++ b/css/style.sass
@@ -23,8 +23,14 @@ h1, h2, h3, h4
     font-family: $heading-font-family
 
 .post
-    h1, h2, h3, h4 
-        margin-top: $space*1.5
+    h1, h2 
+        margin-top: $space*2.3
+    h3, h4 
+        margin-top: $space*2
+
+    h2 + h3
+        margin-top: $space*1.3
+
 
 a 
     color: $color-primary
